--- a/shopping_mall/src/main/resources/templates/order/orderCheckout.html
+++ b/shopping_mall/src/main/resources/templates/order/orderCheckout.html
@@ -6,6 +6,8 @@
 <head>
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="https://service.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 </head>
 
 <th:block layout:fragment="script">
@@ -21,7 +23,7 @@
         function getOrderTotalPrice(){
             var orderTotalPrice = 0;
             const numberFormatter = Intl.NumberFormat('en-US');
-            $("input[name=cartChkBox]:checked").each(function() {
+            $("input[name=cartChkBox]").each(function() {
                 var cartItemId = $(this).val();
                 var price = $("#price_" + cartItemId).attr("data-price");
                 var count = $("#count_" + cartItemId).val();
@@ -57,13 +59,12 @@
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
-            var url = "/cartItem/" + cartItemId+"?count=" + count;
+            var url = "/cartItem/" + cartItemId + "?count=" + count;
 
             $.ajax({
                 url      : url,
                 type     : "PATCH",
                 beforeSend : function(xhr){
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
                     xhr.setRequestHeader(header, token);
                 },
                 dataType : "json",
@@ -84,8 +85,7 @@
             });
         }
 
-        // 장바구니 상품(들) 주문
-        function orders() {
+        function orders () {
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
@@ -95,8 +95,13 @@
             var paramData = new Object();
 
             var orderTotalPrice = 0;
+            var name = $("#name").val();
+            var email = $("#email").val();
+            var phone = $("#phone").val();
+            var zipcode = $("#zipcode").val();
+            var address = $("#city").val();
 
-            $("input[name=cartChkBox]:checked").each(function () {
+            $("input[name=cartChkBox]").each(function () {
                 var cartItemId = $(this).val();
                 var data = new Object();
 
@@ -114,35 +119,59 @@
 
             if (orderTotalPrice == 0) {
                 alert("상품을 최소 1개 이상 주문해야 합니다.");
-                // location.href="/cart";
                 location.href='/checkout';
                 return false;
             }
 
-            $.ajax({
-                url      : url,
-                type     : "POST",
-                contentType : "application/json",
-                data     : param,
-                beforeSend : function(xhr){
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                    xhr.setRequestHeader(header, token);
-                },
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
-                    alert("주문이 완료 되었습니다.");
-                    location.href='/orders';
-                },
-                error : function(jqXHR, status, error){
+            var IMP = window.IMP;
+            IMP.init('imp84048403');
+            IMP.request_pay({
+                pg: 'kakaopay.TC0ONETIME',
+                pay_method: 'card',
+                merchant_uid: 'merchant_' + new Date().getTime(),
+                name: '주문명 : 아메리카노',
+                amount: orderTotalPrice,
+                buyer_email: email,
+                buyer_name: name,
+                buyer_tel: phone,
+                buyer_addr: address,
+                buyer_postcode: '123-456',
+            }, function (rsp) {
+                console.log(rsp);
+                if (rsp.success) {
+                    var msg = '결제가 완료되었습니다.';
+                    msg += '결제 금액 : ' + rsp.paid_amount;
+                    alert(msg);
 
-                    if(jqXHR.status == '401'){
-                        alert('로그인 후 이용해주세요');
-                        location.href='/members/login';
-                    } else{
-                        alert(jqXHR.responseJSON.message);
-                    }
+                    $.ajax({
+                        url      : url,
+                        type     : "POST",
+                        contentType : "application/json",
+                        data     : param,
+                        beforeSend : function(xhr){
+                            xhr.setRequestHeader(header, token);
+                        },
+                        dataType : "json",
+                        cache   : false,
+                        success  : function(result, status){
+                            alert("주문이 완료 되었습니다.");
+                            location.href='/orders';
+                        },
+                        error : function(jqXHR, status, error){
+                            if(jqXHR.status == '401'){
+                                alert('로그인 후 이용해주세요');
+                                location.href='/members/login';
+                            } else{
+                                alert(jqXHR.responseJSON.message);
+                            }
 
+                        }
+                    });
+
+                } else {
+                    var msg = '결제에 실패하였습니다.';
+                    msg += '에러내용 : ' + rsp.error_msg;
+                    alert(msg);
                 }
             });
         }
@@ -174,7 +203,7 @@
 </th:block>
 
 <div layout:fragment="content" class="content-mg">
-    <h2 class="mb-4">장바구니 목록</h2>
+    <h2 class="mb-4">상품 정보</h2>
     <div>
         <table class="table">
             <colgroup>
@@ -186,7 +215,7 @@
             </colgroup>
             <thead>
                 <tr class="text-center">
-                    <td><input type="checkbox" id="checkall" onclick="checkAll()"></td>
+                    <td><input type="checkbox" id="checkall"></td>
                     <td>Product</td>
                     <td>Price</td>
                     <td>Quantity</td>
@@ -235,7 +264,7 @@
             <h3>배송 정보</h3>
             <div class="form-group" style="margin-top: 30px;">
                 <label th:for="name">이름</label>
-                <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+                <input id="name" type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
                 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
@@ -245,7 +274,7 @@
             </div>
             <div class="form-group">
                 <label th:for="phone">연락처</label>
-                <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
+                <input id="phone" type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
                 <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
@@ -253,15 +282,15 @@
             </div>
             <div class="form-group">
                 <input type="text" th:field="*{zipcode}" style="width: 40%; display: inline;" class="form-control" placeholder="우편번호" readonly="readonly">
-                <button type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
+                <button id="zipcode" type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
                 <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
-                <input type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
+                <input id="city" type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
                 <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
-                <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
+                <input id="street" type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
                 <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
@@ -274,8 +303,8 @@
                     <input type="radio" id="contactChoice1" name="contact" value="email" />
                     <label for="contactChoice1">신용카드</label>
 
-                    <input type="radio" id="contactChoice2" name="contact" value="phone" />
-                    <label for="contactChoice2">무통장입금</label>
+                    <input type="radio" id="kakaopay" name="contact" value="phone" />
+                    <label for="kakaopay">카카오페이</label>
 
                     <input type="radio" id="contactChoice3" name="contact" value="mail" />
                     <label for="contactChoice3">Paypal</label>
@@ -284,7 +313,7 @@
         </div>
 
         <div class="text-center mt-3">
-            <button type="button" class="btn btn-outline-success btn-lg" onclick="orders()">주문하기</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="orders()">결제하기</button>
             <a class="btn btn-outline-danger btn-lg" href="/cart" role="button">이전으로</a>
         </div>
     </div>
