--- a/shopping_mall/src/main/resources/templates/cart/cartList.html
+++ b/shopping_mall/src/main/resources/templates/cart/cartList.html
@@ -116,69 +116,6 @@
                 }
             });
         }
-
-<!--        // 장바구니 상품(들) 주문-->
-<!--        function orders() {-->
-<!--            var token = $("meta[name='_csrf']").attr("content");-->
-<!--            var header = $("meta[name='_csrf_header']").attr("content");-->
-
-<!--            var url = "/cart/orders";-->
-
-<!--            var dataList = new Array();-->
-<!--            var paramData = new Object();-->
-
-<!--            var orderTotalPrice = 0;-->
-
-<!--            $("input[name=cartChkBox]:checked").each(function () {-->
-<!--                var cartItemId = $(this).val();-->
-<!--                var data = new Object();-->
-
-<!--                var price = $("#price_" + cartItemId).attr("data-price");-->
-<!--                var count = $("#count_" + cartItemId).val();-->
-<!--                orderTotalPrice += price * count;-->
-
-<!--                data["cartItemId"] = cartItemId;-->
-<!--                dataList.push(data);-->
-<!--            });-->
-
-<!--            paramData['cartOrderDtoList'] = dataList;-->
-
-<!--            var param = JSON.stringify(paramData);-->
-
-<!--            if (orderTotalPrice == 0) {-->
-<!--                alert("상품을 최소 1개 이상 주문해야 합니다.");-->
-<!--                location.href="/cart";-->
-<!--                return false;-->
-<!--            }-->
-
-<!--            $.ajax({-->
-<!--                url      : url,-->
-<!--                type     : "POST",-->
-<!--                contentType : "application/json",-->
-<!--                data     : param,-->
-<!--                beforeSend : function(xhr){-->
-// <!--                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */-->
-// <!--                    xhr.setRequestHeader(header, token);-->
-// <!--                },-->
-// <!--                dataType : "json",-->
-// <!--                cache   : false,-->
-// <!--                success  : function(result, status){-->
-// <!--                    alert("주문이 완료 되었습니다.");-->
-// <!--                    location.href='/orders';-->
-// <!--                },-->
-// <!--                error : function(jqXHR, status, error){-->
-//
-// <!--                    if(jqXHR.status == '401'){-->
-// <!--                        alert('로그인 후 이용해주세요');-->
-// <!--                        location.href='/members/login';-->
-// <!--                    } else{-->
-// <!--                        alert(jqXHR.responseJSON.message);-->
-// <!--                    }-->
-//
-// <!--                }-->
-// <!--            });-->
-// <!--        }-->
-
     </script>
 </th:block>
 
@@ -271,7 +208,7 @@
         </table>
 
         <div class="text-center mt-3">
-            <a class="btn btn-outline-success btn-lg" href="/checkout" role="button">결제하기</a>
+            <a class="btn btn-outline-success btn-lg" href="/checkout" role="button">주문하기</a>
         </div>
     </div>
 </div>
