--- a/shopping_mall/src/main/resources/templates/mail.html
+++ b/shopping_mall/src/main/resources/templates/mail.html
@@ -49,7 +49,7 @@
                             <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:300px;">
                                 <tr>
                                     <td align="left" valign="top" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;" class="mobile-center">
-                                        <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff;">Shopping Mall</h1>
+                                        <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff;">Cat Mall</h1>
                                     </td>
                                 </tr>
                             </table>
@@ -109,7 +109,7 @@
                                         <tr>
                                             <td th:text="${orderItem.item.getItemName()}" width="75%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;">
                                             </td>
-                                            <td th:text="${orderItem.orderPrice}" width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;">
+                                            <td th:text="${orderItem.orderPrice} + '원'" width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;">
                                             </td>
                                         </tr>
                                         </tbody>
@@ -123,7 +123,7 @@
                                             <td width="75%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
                                                 총액
                                             </td>
-                                            <td th:text="${order.getTotalPrice()}" width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
+                                            <td th:text="${order.getTotalPrice()} + '원'" width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
                                             </td>
                                         </tr>
                                     </table>
