--- a/shopping_mall/src/main/resources/templates/item/itemDetail.html
+++ b/shopping_mall/src/main/resources/templates/item/itemDetail.html
@@ -31,7 +31,7 @@
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
-      var url = "/order";
+      var url = "/checkout";
       var paramData = {
         itemId : $("#itemId").val(),
         count : $("#count").val()
@@ -40,18 +40,17 @@
       var param = JSON.stringify(paramData);
 
       $.ajax({
-        url : url,
-        type : "POST",
+        url      : url,
+        type     : "POST",
         contentType : "application/json",
-        data : param,
-        beforeSend : function(xhr){
+        data     : param,
+        beforeSend : function(xhr) {
           xhr.setRequestHeader(header, token);
         },
         dataType : "json",
-        cache : false,
-        success : function(result, status){
-          alert("주문이 완료 되었습니다.");
-          location.href='/';
+        cache   : false,
+        success  : function(result, status){
+          location.href='/checkout';
         },
         error : function(jqXHR, status, error){
           if(jqXHR.status === '401'){
@@ -68,7 +67,6 @@
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
-      // var url = "/cart";
       var url = "/checkout";
       var paramData = {
         itemId : $("#itemId").val(),
@@ -89,7 +87,6 @@
         cache   : false,
         success  : function(result, status){
           alert("상품을 장바구니에 담았습니다.");
-          // location.href='/checkout';
           location.href='/cart';
         },
         error : function(jqXHR, status, error){
@@ -99,11 +96,9 @@
           } else{
             alert(jqXHR.responseText);
           }
-
         }
       });
     }
-
   </script>
 </th:block>
 
@@ -172,7 +167,7 @@
       </div>
       <div th:if="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="text-right">
         <button type="button" class="btn btn-light border border-primary btn-lg" onclick="addToCart()">장바구니 담기</button>
-        <button type="button" class="btn btn-primary btn-lg" onclick="order()">주문하기</button>
+        <button type="button" class="btn btn-primary btn-lg" onclick="order()">구매하기</button>
       </div>
       <div th:unless="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="text-right">
         <button type="button" class="btn btn-danger btn-lg">품절</button>
